# bmstu-iu7-OOP

./: README.md  style.sh
lab_01/: mainwindow.cpp  mainwindow.h
lab_01/draw/: draw.cpp  draw.h
lab_01/errors/: errors.cpp
lab_01/figure/: edges.cpp  edges.h  figure.cpp  figure.h  point.cpp  point.h  points.cpp  points.h
lab_01/requests/: actions.h  requests.cpp  requests.h
lab_01/tools/: tools.cpp  tools.h
lab_02/: base_matrix.h  matrix.h
lab_02/inc/: base_iterator.h  base_matrix.h  const_iterator.h  iterator.h  matrix.h  matrix_exceptions.h
lab_02/inl/: iterator.inl  matrix_assignment.inl  matrix_functions.inl  matrix_indexations.inl  matrix_iterators.inl  matrix_lifetime.inl  matrix_logic.inl  matrix_operators_add.inl  matrix_operators_div.inl  matrix_operators_mul.inl  matrix_operators_sub.inl  matrix_tools.inl
lab_02/src/: base_exception.cpp  base_iterator.cpp
lab_02/test/: matrix_tests.h  test_constructors.inl  test_operators_add.inl  test_operators_div.inl  test_operators_sub.inl
lab_02_review/: README.md  build.sh  main.cpp
lab_02_review/inc/: base_exception.h  base_iterator.h  base_matrix.h  concept.h  const_iterator.h  iterator.h  iterator_exceptions.h  matrix.h
lab_02_review/inl/: const_iterator.inl  iterator.inl  matrix_functions.inl  matrix_indexations.inl  matrix_iterators.inl  matrix_lifetime.inl  matrix_logic.inl  matrix_operators_add.inl  matrix_operators_div.inl  matrix_operators_mul.inl
lab_02_review/src/: base_matrix.cpp
lab_02_review/test/: matrix_tests.h  test_assignment.inl  test_constructors.inl  test_functions.inl  test_operators_div.inl  test_operators_mul.inl  test_operators_sub.inl
lab_03/: lab_03.pro
lab_03/commands/: CameraCommand.cpp  CameraCommand.h
lab_03/facade/: Facade.h
lab_03/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_03/load/moderators/scene/: SceneLoadModerator.cpp  SceneLoadModerator.h
lab_03/managers/load/: LoadManager.cpp
lab_03/objects/: BaseObject.h  Composite.cpp  Composite.h
lab_03/objects/invisibleobject/: Camera.h
lab_03/objects/visibleobject/carcassmodel/: Point.cpp
lab_04/: lab_04.pro
lab_04/gui/: mainwindow.cpp  mainwindow.h
lab_04/src/: config.hpp
lab_04/src/button/: button.cpp  button.hpp
lab_04/src/cabin/: cabin.cpp  cabin.hpp
lab_04/src/controller/: controller.cpp  controller.hpp
lab_04/src/doors/: doors.cpp  doors.hpp
lab_04/src/elevator/: elevator.cpp  elevator.hpp
lab_04_addition/: lab_04_addition.pro
lab_04_addition/gui/: mainwindow.cpp  mainwindow.h
lab_04_addition/src/: config.hpp
lab_04_addition/src/button/: base_button.cpp  base_button.hpp
lab_04_addition/src/button/elevator_button/: elevator_button.cpp  elevator_button.hpp
lab_04_addition/src/button/floor_button/: floor_button.cpp  floor_button.hpp
lab_04_addition/src/cabin/: cabin.cpp  cabin.hpp
lab_04_addition/src/controller/: controller.cpp  controller.hpp
lab_04_addition/src/doors/: doors.cpp
lab_04_addition/src/elevator/: elevator.cpp  elevator.hpp
lab_04_addition/src/manager/: manager.cpp  manager.hpp
lab_04_with_2points/: CMakeLists.txt  config.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  uml.drawio
lab_04_with_2points/button/: base_button.cpp  base_button.hpp
lab_04_with_2points/button/elevator_button/: elevator_button.cpp  elevator_button.hpp
lab_04_with_2points/button/floor_button/: floor_button.cpp  floor_button.hpp
lab_04_with_2points/cabin/: cabin.cpp  cabin.h  cabin.hpp
lab_04_with_2points/cabin_new/: cabin.cpp  cabin.h
lab_04_with_2points/controller/: controller.cpp  controller.hpp
lab_04_with_2points/doors/: doors.cpp  doors.hpp
lab_04_with_2points/doors_new/: doors.cpp  doors.h
lab_04_with_2points/elevator_system/: elevator_system.cpp  elevator_system.hpp
